--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "react-native start"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "bazaar": "file:",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
