--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,14 @@
     "axios": "^1.7.7",
     "bazaar": "file:",
     "expo": "~51.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.1"
   },
