--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "firebase-admin": "^12.7.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.3",
+    "multer": "^1.4.5-lts.1",
+    "react-native-image-picker": "^7.1.2",
     "server": "file:"
   }
 }
