--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.20.1",
     "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.1"
